src/lexer/snapshots/vfpl__lexer__test__minus_with_leading_zeros.snap
---
source: src/lexer/test.rs
expression: "lex(\"-0000012\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 8,
            },
            kind: Int(
                -12,
            ),
        },
    ],
)
