src/lexer/snapshots/vfpl__lexer__test__one_number.snap
---
source: src/lexer/test.rs
expression: "lex(\"1\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 1,
            },
            kind: Int(
                1,
            ),
        },
        Token {
            span: Span {
                start: 18446744073709551615,
                end: 18446744073709551615,
            },
            kind: Eof,
        },
    ],
)
