src/lexer/snapshots/vfpl__lexer__test__please_keyword.snap
---
source: src/lexer/test.rs
expression: "lex(\"please\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 6,
            },
            kind: Please,
        },
    ],
)
