src/lexer/snapshots/vfpl__lexer__test__string.snap
---
source: src/lexer/test.rs
expression: "lex(\"\\\"Hello all\\\"\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 10,
            },
            kind: String(
                "hello all",
            ),
        },
    ],
)
