src/lexer/snapshots/vfpl__lexer__test__string_no_end.snap
---
source: src/lexer/test.rs
expression: "lex(\"\\\"Hahaha this is going to destroy it\")"

---
Err(
    UnexpectedEOF,
)
