src/lexer/snapshots/vfpl__lexer__test__string_with_escape_chars.snap
---
source: src/lexer/test.rs
expression: "lex(\"\\\"What is a \\\\\\\"unit test\\\\\\\"?\\\"\")"

---
Ok(
    [
        Token {
            span: Span {
                start: 0,
                end: 25,
            },
            kind: String(
                "what is a \"unit test\"?",
            ),
        },
    ],
)
